# AbrahamBaffoe1

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SETUP.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: code-review.yml
examples/: async_example.py  basic_example.py
scripts/: post_comments.py  review_pr.py
src/: __init__.py  analyzer.py  config.py  github_integration.py  language_detector.py  web_dashboard.py
src/agents/: __init__.py  architecture_agent.py  performance_agent.py  security_agent.py  style_agent.py
src/core/: __init__.py  agent.py  models.py  orchestrator.py
tests/: __init__.py  test_language_detector.py  test_models.py
