[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agentic-code-reviewer"
version = "0.1.0"
description = "Multi-agent AI system for comprehensive code review and quality analysis"
authors = [{name = "Developer"}]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
web = [
    "flask>=2.0.0",
    "requests>=2.28.0",
]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.32.0"
pydantic = "^2.0"
python-dotenv = "^1.0"
flask = { version = "^2.0.0", optional = true }
requests = { version = "^2.28.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"

[tool.poetry.extras]
web = ["flask", "requests"]
